--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,10 +1,10 @@
 // COLORS
-$primary-color: #200122;
-$secondary-color: #6f0000;
+$primary-color: #000000;
+$secondary-color: #0f9b0f;
 
 $white-color: #F6F6F6;
 
-$dark-grey: #333333;
+$dark-grey: #434B4D;
 $light-grey: #d2d2d2;
 
 $dark-blue-text: #272341; // For Headings
